Fixed mute-text class color contrast issue

--- a/web/html/src/branding/css/base/tables.scss
+++ b/web/html/src/branding/css/base/tables.scss
@@ -17,6 +17,10 @@
 
 td {
   overflow: hidden;
+  
+  .btn-group {
+    display: flex;
+  }
 }
 
 .table-framed td,
